--- a/random-quote-generator-basic/index.html
+++ b/random-quote-generator-basic/index.html
@@ -15,9 +15,10 @@
                 <q id="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi laudantium dolore odit voluptatibus debitis harum nesciunt quaerat reprehenderit velit recusandae eos officiis vero magni, sapiente praesentium, ipsam. Eaque, repellendus, ex!</q>
                 <p> - <span id="author">Random Author</span></p>
             </blockquote>
-            
             <button id="newquote">New Quote</button>
+            <div class="share">
             <a class="twitter-share-button" href="https://twitter.com/share" data-size="large" data-text="Quote Here">Tweet</a>
+            </div
         </div>
         </div>
         <script type="text/javascript" src="asset/js/script.js"></script>
