Added Basic Wikipedia Search Engine Files, HTML and CSS done.

--- a/local-weather-app-basic/index.html
+++ b/local-weather-app-basic/index.html
@@ -8,11 +8,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
-        <div class="container">
-            <p id="location"><span>Unknown Location</span></p>
-            <p id="icon"></p>
-            <p class="imp"><span id="temp">N/A</span><span id="unit" >°C/°F</span></p>
-            <p><span id="condition">Unknown Condition</span></p>
+        <div class="flexbox">
+            <div class="container">
+                <p id="location"><span>Unknown Location</span></p>
+                <p id="icon"></p>
+                <p class="imp"><span id="temp">N/A</span><span id="unit" >°C/°F</span></p>
+                <p><span id="condition">Unknown Condition</span></p>
+            </div>
         </div>
         <script type="text/javascript" src="asset/js/script.js"></script>
     </body>
