--- a/random-quote-generator-basic/index.html
+++ b/random-quote-generator-basic/index.html
@@ -18,7 +18,7 @@
             <button id="newquote">New Quote</button>
             <div class="share">
             <a class="twitter-share-button" href="https://twitter.com/share" data-size="large" data-text="Quote Here">Tweet</a>
-            </div
+            </div>
         </div>
         </div>
         <script type="text/javascript" src="asset/js/script.js"></script>
