--- a/twitch-streams-status-api-basic/index.html
+++ b/twitch-streams-status-api-basic/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Twitch Status Portal</title>
+        <title>Streamers Status Portal</title>
         <link rel="stylesheet" type="text/css" href="asset/css/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700|Titillium+Web" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700|Titillium+Web:300i,400,600,600i" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
-        <h1>Twitch Status Portal</h1>
+    
+        <div class="container">
+            <h1>Streamers Status Portal</h1>
+            <div>
+                <ul>
+                </ul>
+            </div>
+        </div>
 
         <script type="text/javascript" src="asset/js/script.js"></script>
     </body>
