Reworked tweet button for random quote generator.

--- a/random-quote-generator-basic/index.html
+++ b/random-quote-generator-basic/index.html
@@ -17,7 +17,7 @@
             </blockquote>
             <button id="newquote">New Quote</button>
             <div class="share">
-            <a class="twitter-share-button" href="https://twitter.com/share" data-size="large" data-text="Quote Here">Tweet</a>
+            <a class="twittershare" href="https://twitter.com/intent/tweet/" target="_blank">Tweet</a>
             </div>
         </div>
         </div>
