Added logic to random meal selector.

--- a/meal-selector/index.html
+++ b/meal-selector/index.html
@@ -9,10 +9,11 @@
     <body>
         <div class="container">
         <h1>Meal Selector</h1>
-        <p>Always have trouble deciding on a meal? Try the Meal Selector! A press of a button and it will choose the type of food and various ingredients that are in the type of food!</p>
+        <p>Always have trouble deciding on a meal? Try the Meal Selector! A press of a button and it will choose the type of food</p>
         <div class="box">
-            <h2>Type of Food: <span>French</span></h2>
-            <p>Price: $$$ / Volume: *** / Nutrients: A-</p>
+            <div class="foodContent">
+                <h2>We're Eating : "<span>French</span>"</h2>
+            </div>
         </div>
         <button>Pick my Meal</button>
         </div>
