--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -13,38 +13,38 @@
     <div id="shell">
         <h3>JS Calc T-100</h3>
         <div id="display">
-            <h1 id="bigDisplay">1</h1>
-            <div id="progress">
-                <p>0</p>
-            </div>
+                <p id="progress">0</p>
+            <h1 id="bigDisplay">0</h1>
         </div>
         <div class="container">
             <div class="row">
                 <button id="allClear">AC</button>
+                <button id="btnPer">%</button>
+                <button id="btnDiv">÷</button>
             </div>
             <div class="row">
                 <button id="btn7">7</button>
                 <button id="btn8">8</button>
                 <button id="btn9">9</button>
-                <button id="btnDiv">÷</button>
+                <button id="btnMult">×</button>
             </div>
             <div class="row">
                 <button id="btn4">4</button>
                 <button id="btn5">5</button>
                 <button id="btn6">6</button>
-                <button id="btnMult">×</button>
+                <button id="btnSub">-</button>
             </div>
             <div class="row">
                 <button id="btn1">1</button>
                 <button id="btn2">2</button>
                 <button id="btn3">3</button>
-                <button id="btnSub">-</button>
+                <button id="btnAdd">+</button>
             </div>
             <div class="row">
                 <button id="btn0">0</button>
                 <button id="btnDec">.</button>
                 <button id="btnEql">=</button>
-                <button id="btnAdd">+</button>
+                
             </div>
         </div>
     </div>
