Completed pomodoro timer fully

--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -13,6 +13,7 @@
 <body>
   <div class="container">
       <h1>Pomodoro Clock</h1>
+      <h2 class="status">Waiting...</h2>
       <h2 id="displayTime">25:00</h2>
         <div class="timerSettings">
           <div>          
