--- a/simon-game/index.html
+++ b/simon-game/index.html
@@ -5,8 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Simon Says</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="asset/css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Simon Says</h1>
+    <div class="settings">
+      <h3>Level: <span class="countDis">1</span></h3>
+      <h2 id="display">Press Start To Play</h2>
+      <button id="start">Start/Restart</button>
+      <h3>Strict Mode: <span class="onOff">OFF</span></h3>
+      <button id="strictBut">Strict</button>
+    </div>
+    <div class="red block"></div>
+    <div class="blue block"></div>
+    <div class="green block"></div>
+    <div class="yellow block"></div>
+  </div>
+  <script type="text/javascript" src="asset/js/script.js">
+</script>
 </body>
 </html>
