updated tic-tac-toe game, removed multiplayer to prevent complications for now, need to fix computer AI in next version

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -13,9 +13,14 @@
   <div id="settings">
     <h1>Tic-Tac-Toe</h1>
     <div id="setSpace">
+      <div id="pickPlayer">
+        <div>
+          <!-- <h2 id="single">Singleplayer</h2> -->
+          <!-- <h2 id="multi">Multiplayer</h2> -->
+        </div>
+      </div>
       <div id="selection">
         <div>
-          <h3>Pick:</h3>
           <h2 id="goFirst">X goes first</h2>
           <h2 id="goSecond">O goes second</h2>
         </div>
